--- a/library_app/templates/library_app/base_admin.html
+++ b/library_app/templates/library_app/base_admin.html
@@ -69,6 +69,8 @@
     <a href="{% url 'admin_reviews' %}">Reviews</a>
     <a href="{% url 'admin_users' %}">Users</a>
     <a href="{% url 'logout' %}">Logout</a>
+    <a href="{% url 'admin_returns' %}">Returns</a>
+
 </div>
 
 <div class="main-content">
