--- a/library_app/templates/library_app/admin_orders.html
+++ b/library_app/templates/library_app/admin_orders.html
@@ -14,8 +14,8 @@
 
 {% for order in orders %}
 <tr>
-    <td>{{ order.user.username }}</td>
-    <td>{{ order.book.title }}</td>
+    <td>{{ order.username }}</td>
+    <td>{{ order.book_title }}</td>
     <td>{{ order.quantity }}</td>
     <td>{{ order.date_rent }}</td>
     <td>{{ order.date_return|default:"Not returned" }}</td>
