add the option to manage genre add/delete/view the list

--- a/library_app/templates/library_app/admin_books.html
+++ b/library_app/templates/library_app/admin_books.html
@@ -135,6 +135,16 @@ td:last-child {
 
 <a href="{% url 'admin_add_book' %}" class="add-btn">+ Add New Book</a>
 
+<a href="{% url 'admin_add_genre_page' %}" class="add-btn"
+   style="background:#6b8e95; margin-left:10px;">
+    + Add Genre
+</a>
+
+<a href="{% url 'admin_delete_genre_list' %}" class="add-btn"
+   style="background:#6b8e95; margin-left:10px;">
+    - delete Genre
+</a>
+
 <table>
 <tr>
     <th>Title</th>
