--- a/library_app/templates/library_app/admin_add_book.html
+++ b/library_app/templates/library_app/admin_add_book.html
@@ -9,7 +9,9 @@
     <input type="text" name="title" placeholder="Book Title" required><br>
     <input type="text" name="author" placeholder="Author" required><br>
     <input type="number" name="quantity" placeholder="Quantity" required><br>
-
+    
+    
+    <label><strong>Genres</strong> (Ctrl / Cmd to select multiple)</label><br>
     <select name="genres" multiple>
         {% for genre in genres %}
             <option value="{{ genre.id }}">{{ genre.name }}</option>
